@@ -1,3 +1,6 @@
+06/02/08 Celine Scornavacca
+* Bug fixed in ReRoot + correction of version number in bppSeqGen.
+
 22/01/08 -*- Version 0.2.0 -*-
 
 13/01/08 Julien Dutheil
